tests/reference/asr-test_return2-add829b.stderr
semantic error: Return type of function is not defined
 --> tests/errors/test_return2.py:4:5
  |
4 |     return x
  |     ^^^^^^^^ 
